--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/bebas-neue": "^4.5.7",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
